# NYCU_Deep_Learning

./: .gitignore  DDPM.md  pyproject.toml
Lab1/: main.py
Lab2/: dataloader.py  eval.py  train.py
Lab2/checkpoints/: EEG_ELU_74.pt  EEG_LeakyReLU_76.pt  EEG_ReLU_73.pt
Lab2/model/: __init__.py
Lab2/src/: main.py  train.py
Lab2/src/model/: deepconvnet.py  eegnet.py
Lab3/: 312553004_施育衡.md  dataloader.py  eval.py  plot.py  readme.md  train.py
Lab3/image/: ResNet152.json  ResNet18.json  ResNet50.json
Lab3/model/: __block__.py  resnet.py
Lab4/: DLP_LAB4_312553004_施育衡.md  Trainer.py  plot.py  readme.md
Lab4/modules/: modules.py
Lab5/: best_ddpg.pth  best_dqn.pth  ddpg.py  dqn.pth  dqn.py  dqn_breakout.py  readme.md  report.md
Lab6/: dataloader.py  readme.md  train.py  train_old.py
